news article link color

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
               <div class="news-card">
                 <div class="news-card--date">17 Dec 2021</div>
                 <div class="news-card--title">
-                  <a href="#">Lorem Ipsum In The Town</a>
+                  <a href="#" class="primary">Lorem Ipsum In The Town</a>
                 </div>
                 <div class="news-card--text">
                   Lorem is having fun in Ipsum town lets join them Lorem is
@@ -890,7 +890,7 @@
               <div class="news-card">
                 <div class="news-card--date">17 Dec 2021</div>
                 <div class="news-card--title">
-                  <a href="#">Lorem Ipsum In The Town</a>
+                  <a href="#" class="primary">Lorem Ipsum In The Town</a>
                 </div>
                 <div class="news-card--text">
                   Lorem is having fun in Ipsum town lets join them Lorem is
