reponsive changes made

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     />
     <link rel="stylesheet" href="./assets/css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body>
     <header>
@@ -45,7 +46,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6">
+          <div class="col-6 desk-nav">
             <div class="icon-box d-flex justify-content-end align-items-center">
               <a href="#" class="hover-cc primary">
                 Find your local member firm
@@ -60,7 +61,7 @@
         </div>
       </div>
       <div class="container-fluid px-0">
-        <div class="bot-header">
+        <div class="bot-header desk-nav">
           <div class="container">
             <div class="row">
               <div class="col-5">
@@ -794,9 +795,9 @@
         </div>
       </section>
       <section id="info-firm">
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
           <div class="row mx-0 px-0">
-            <div class="col-12 col-md-6 firm-image px-0">
+            <div class="col-12 col-md-6 firm-image p-5">
               <p>What is trending?</p>
               <div class="text-wrapper">
                 <span>IFRS</span>
@@ -899,7 +900,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 text-end">
+            <div class="col-12 text-end py-5">
               <a id="viewAll" href="#"
                 >View All <i class="fas fa-arrow-right"></i
               ></a>
@@ -909,8 +910,8 @@
       </section>
       <section id="inside-breadcrumb">
         <div class="container">
-          <div class="row mx-0 px-0 align-items-center">
-            <div class="col-5 company-info">
+          <div class="row mx-0 px-0 h-60v align-items-center">
+            <div class="col-12 col-lg-5 company-info">
               <p class="company--slogan fs-2">THE LOREM IPSUM IMPERIUM</p>
               <p class="company--name">Inside Lorem Master</p>
               <p class="company--text">
@@ -927,7 +928,17 @@
       <section id="experience">
         <div class="container-fluid px-0 mx-0">
           <div class="row px-0 mx-0">
-            <div class="col-12 col-md-6 primary-bg text-end">
+            <div
+              class="
+                col-12 col-lg-6
+                primary-bg
+                h-100v
+                d-flex
+                justify-content-center
+                align-items-center
+                px-50
+              "
+            >
               <div class="exp-cont grad-container">
                 <p class="title">GRADUATES</p>
                 <p class="info">Unlock your potential</p>
@@ -942,7 +953,17 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-md-6 exp-cont">
+            <div
+              class="
+                col-12 col-lg-6
+                exp-cont
+                h-100v
+                d-flex
+                justify-content-center
+                align-items-center
+                px-50
+              "
+            >
               <div class="exp-cont hires-container">
                 <p class="title">EXPERIENCED HIRES</p>
                 <p class="info">Got the experience?</p>
