Featured Global Insights

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
       <section id="card-slider" class="">
         <div class="container">
           <div class="row">
-            <div class="col-4 mt-5">
+            <div class="col-12 col-lg-4 mt-5">
               <h3 class="fs-3 fw-600">Featured global insights</h3>
             </div>
           </div>
