responsive footer accardions made

--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
     <footer class="primary-bg">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-2">
+          <div class="col-12 col-lg-2 desk-footer">
             <div class="link-wrapper">
               <p class="title fs-2-5 fw-600">Connect</p>
               <a href="#">Meet our people</a>
@@ -993,7 +993,7 @@
               <a href="#">Global reach</a>
             </div>
           </div>
-          <div class="col-12 col-lg-2">
+          <div class="col-12 col-lg-2 desk-footer">
             <div class="link-wrapper">
               <p class="title fw-600">About</p>
               <a href="#">About us</a>
@@ -1003,7 +1003,7 @@
               <a href="#">GPPC</a>
             </div>
           </div>
-          <div class="col-12 col-lg-2">
+          <div class="col-12 col-lg-2 desk-footer">
             <div class="link-wrapper">
               <p class="title fw-600">LEGAL</p>
               <a href="#">Privacy</a>
@@ -1011,6 +1011,79 @@
               <a href="#">Disclaimer</a>
               <a href="#">Site map</a>
               <a href="#">Unauthorised trademark use</a>
+            </div>
+          </div>
+          <div class="col-12 mobile-footer my-5">
+            <div class="accardion px-5">
+              <div
+                class="
+                  accardion-title
+                  d-flex
+                  justify-content-between
+                  align-items-center
+                "
+              >
+                <p>Connect</p>
+                <div class="accardion-icon-wrapper">
+                  <div class="top"></div>
+                  <div class="bot"></div>
+                </div>
+              </div>
+              <div class="accardion-text d-flex flex-column">
+                <a href="#">Meet our people</a>
+                <a href="#">Contact us</a>
+                <a href="#">Global reach</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 mobile-footer my-5">
+            <div class="accardion px-5">
+              <div
+                class="
+                  accardion-title
+                  d-flex
+                  justify-content-between
+                  align-items-center
+                "
+              >
+                <p>About</p>
+                <div class="accardion-icon-wrapper">
+                  <div class="top"></div>
+                  <div class="bot"></div>
+                </div>
+              </div>
+              <div class="accardion-text d-flex flex-column">
+                <a href="#">About us</a>
+                <a href="#">Careers</a>
+                <a href="#">Press</a>
+                <a href="#">Moders slavery statement</a>
+                <a href="#">GPPC</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 mobile-footer my-5">
+            <div class="accardion px-5">
+              <div
+                class="
+                  accardion-title
+                  d-flex
+                  justify-content-between
+                  align-items-center
+                "
+              >
+                <p>LEGAL</p>
+                <div class="accardion-icon-wrapper">
+                  <div class="top"></div>
+                  <div class="bot"></div>
+                </div>
+              </div>
+              <div class="accardion-text d-flex flex-column">
+                <a href="#">Privacy</a>
+                <a href="#">Cookie policy</a>
+                <a href="#">Disclaimer</a>
+                <a href="#">Site map</a>
+                <a href="#">Unauthorised trademark use</a>
+              </div>
             </div>
           </div>
           <div class="col-12 col-lg-6 social-icons">
