social box center mode

--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,9 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-6 social-icons">
+          <div
+            class="col-12 col-lg-6 social-icons d-flex justify-content-center"
+          >
             <a href="#">
               <i class="fab fa-youtube"></i>
             </a>
