--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
             </div>
           </div>
           <div
-            class="col-12 col-lg-6 social-icons d-flex justify-content-center"
+            class="col-12 col-lg-6 social-icons d-flex justify-content-around"
           >
             <a href="#">
               <i class="fab fa-youtube"></i>
