issue with nav bar fixed

--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
           </div>
           <div class="col-12 col-lg-2 desk-footer">
             <div class="link-wrapper">
-              <p class="title fw-600">LEGAL</p>
+              <p class="title fw-600">Legal</p>
               <a href="#">Privacy</a>
               <a href="#">Cookie policy</a>
               <a href="#">Disclaimer</a>
