nav bar ug fixed

--- a/team.html
+++ b/team.html
@@ -487,7 +487,9 @@
                 class="white hover-cc fw-300 my-4 my-lg-0"
                 >Why FA Consulting</a
               >
-              <a href="#" class="white hover-cc fw-300 my-4 my-lg-0"
+              <a
+                href="./customers.html"
+                class="white hover-cc fw-300 my-4 my-lg-0"
                 >Müştərilərimiz</a
               >
               <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0"
