--- a/why-fac.html
+++ b/why-fac.html
@@ -493,7 +493,7 @@
                 class="white hover-cc fw-300 my-4 my-lg-0"
                 >Müştərilərimiz</a
               >
-              <a href="#" class="white hover-cc fw-300 my-4 my-lg-0"
+              <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0"
                 >Komandamız</a
               >
             </div>
